fix scrollbar for overflow content

--- a/styles/todo.scss
+++ b/styles/todo.scss
@@ -156,9 +156,9 @@ body{
   margin-top: 20px;
   margin-right: 5px;
   padding: 0 20px 10px 25px;
-  height: 250px;
+  height: 150px;
   width: 700px;
- overflow: scroll
+  overflow-y: scroll
 }
 .task-box.overflow{
   overflow-y: auto;
